// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStreamSecuritySelector component should hide derivative datastreams 1`] = `
<DocumentFragment>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
  />
  <div
    style="margin-top: 8px; padding: 16px;"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mqdkjr-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-10dv3g5-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-g46iui-MuiTypography-root-MuiLink-root"
          title="testA.txt"
        >
          testA.txt
        </a>
        <br />
        <span
          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
        >
          Overridden
        </span>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
      >
        <div
          class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
          style="width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard css-h9aup-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            id="dsi-security-policy-0-label"
          >
            Override datastream security policy
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl  css-11v83nz-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            required=""
            validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="dsi-security-policy-0-select"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              data-testid="dsi-security-policy-0-select"
              id="dsi-security-policy-0-select"
              role="button"
              tabindex="0"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              aria-labelledby="dsi-security-policy-0-label"
              class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
              data-analyticsid="dsi-security-policy-0-input"
              data-testid="dsi-security-policy-0-input"
              id="dsi-security-policy-0-input"
              name="testA.txt"
              required=""
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecuritySelector component should not display datastream security selected in dropdown 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`DataStreamSecuritySelector component should render default view 1`] = `
<DocumentFragment>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
  />
  <div
    style="margin-top: 8px; padding: 16px;"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mqdkjr-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-10dv3g5-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-g46iui-MuiTypography-root-MuiLink-root"
          title="test4.txt"
        >
          test4.txt
        </a>
        <br />
        <span
          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
        >
          Overridden
        </span>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
      >
        <div
          class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
          style="width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-5afocb-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="true"
            id="dsi-security-policy-0-label"
          >
            Override datastream security policy
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl  css-11v83nz-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            required=""
            validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="dsi-security-policy-0-select"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              data-testid="dsi-security-policy-0-select"
              id="dsi-security-policy-0-select"
              role="button"
              tabindex="0"
            >
              Administrators
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              aria-labelledby="dsi-security-policy-0-label"
              class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
              data-analyticsid="dsi-security-policy-0-input"
              data-testid="dsi-security-policy-0-input"
              id="dsi-security-policy-0-input"
              name="test4.txt"
              required=""
              tabindex="-1"
              value="1"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecuritySelector component should show non-derivative datastreams 1`] = `
<DocumentFragment>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-1uywuy6-MuiTypography-root"
  />
  <div
    style="margin-top: 8px; padding: 16px;"
  >
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-4 css-mqdkjr-MuiGrid2-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-10dv3g5-MuiGrid2-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-g46iui-MuiTypography-root-MuiLink-root"
          title="test9.txt"
        >
          test9.txt
        </a>
        <br />
        <span
          class="MuiTypography-root MuiTypography-caption css-1e4ju4k-MuiTypography-root"
        >
          Overridden
        </span>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-y6fwcd-MuiGrid2-root"
      >
        <div
          class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
          style="width: 100%;"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard css-h9aup-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            id="dsi-security-policy-0-label"
          >
            Override datastream security policy
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-5g2d0z-MuiFormLabel-asterisk"
            >
               *
            </span>
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl  css-11v83nz-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            required=""
            validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="dsi-security-policy-0-select"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              data-testid="dsi-security-policy-0-select"
              id="dsi-security-policy-0-select"
              role="button"
              tabindex="0"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              aria-labelledby="dsi-security-policy-0-label"
              class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
              data-analyticsid="dsi-security-policy-0-input"
              data-testid="dsi-security-policy-0-input"
              id="dsi-security-policy-0-input"
              name="test9.txt"
              required=""
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
